--- a/.roadhogrc
+++ b/.roadhogrc
@@ -10,13 +10,8 @@
     "@line-height-base": "1.2"
   },
   "autoprefixer": null,
-  "proxy": {
-    "/api": {
-      "target": "http://jsonplaceholder.typicode.com/",
-      "changeOrigin": true,
-      "pathRewrite": { "^/api" : "" }
-    }
-  },
+  
+  "proxy": null,
   "extraBabelPlugins": [
     "transform-runtime",
     ["import", { "libraryName": "antd", "style": true }]
