--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "antd": "^2.5.2",
     "babel-runtime": "^6.9.2",
-    "dva": "^1.2.0",
+    "dva": "^1.2.1",
     "dva-loading": "^0.2.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
@@ -27,7 +27,8 @@
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
     "husky": "^0.12.0",
+    "mockjs": "^1.0.1-beta3",
     "redbox-react": "^1.3.2",
-    "roadhog": "^0.3.0"
+    "roadhog": "^0.5.2"
   }
 }
